# 3D-AI-Chatbot-with-Real-Time-LED-Holographic

./: .env.example  .gitignore  CHANGELOG.md  Debugger_Colab.ipynb  LICENSE  Makefile  README.md  pyproject.toml
src/holographic_chatbot/: __init__.py  config.py  main.py
src/holographic_chatbot/animation/: __init__.py  model_loader.py  renderer.py
src/holographic_chatbot/audio/: __init__.py  phoneme_analyzer.py  speech_synthesis.py
src/holographic_chatbot/chatbot/: __init__.py  gpt_integration.py
src/holographic_chatbot/fan/: __init__.py  api_client.py  frame_converter.py
src/holographic_chatbot/utils/: __init__.py  logger.py
tests/: conftest.py  test_config.py  test_frame_converter.py
